base/analysis-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diet-analysis-service
  labels:
    app: diet-analysis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diet-analysis-service
  template:
    metadata:
      labels:
        app: diet-analysis-service
    spec:
      containers:
        - name: diet-analysis-service
          image: parkwoohyeock/diet_analysis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: diet-analysis-service
spec:
  selector:
    app: diet-analysis-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
