base/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: input-service
  labels:
    app: input-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: input-service
  template:
    metadata:
      labels:
        app: input-service
    spec:
      containers:
        - name: input-service
          image: parkwoohyeock/diet_input
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          
---
apiVersion: v1
kind: Service
metadata:
  name: input-service
spec:
  selector:
    app: input-service
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30102
  type: NodePort
